<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/kelly_green"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_salario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_salario">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_salario"
            android:textColor="@color/gray">
        </TextView>

        <EditText
            android:id="@+id/edit_gastos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_gastos">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_gastos"
            android:textColor="@color/gray">
        </TextView>

        <EditText
            android:id="@+id/edit_dependentes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_dependentes">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_dependentes"
            android:textColor="@color/gray">
        </TextView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/out_imposto"
            android:layout_marginTop="25dp"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:id="@+id/textResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/resultado_inicial"
            android:layout_marginTop="5dp"
            android:textSize="30sp"
            android:textColor="@color/red">
        </TextView>

        <Button
            android:id="@+id/btn_calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_calcular"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/kelly_green">
        </Button>

    </LinearLayout>

</LinearLayout>